k8s/apps/komga/service.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: komga
        app.kubernetes.io/name: komga
    name: komga
    namespace: komga
spec:
    ports:
        - name: http
          port: 80
          protocol: TCP
          targetPort: http
    selector:
        app: komga
        app.kubernetes.io/name: komga
    type: ClusterIP

---
